--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,15 @@ p{
 .timerPlayer{
   width: 200px;
   background-color: rgb(18, 31, 43);
-  border-radius: 10px;
+
+}
+.player{
+  border-radius: 6px;
+  font-size: 1.5rem;
 }
 .timerPlayer h1{
   text-align: center;
+
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -16,10 +21,11 @@ p{
   padding: 0;
   list-style: none;
   grid-template-columns: repeat(auto-fill, minmax(130px,1fr));
-  gap: 0.8rem
+  gap: 0.8rem;
 }
 .game{
   width: 100%;
+  height: 80%;
 }
 .buttonsGame{
   display: flex;
