--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ html {
   scrollbar-color: rgb(170, 170, 170) #fff;
   scrollbar-color: var(--scrollbar-thumb) var(--background-body);
   scrollbar-width: thin;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
