--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,27 @@
-p{
-  margin: 0;
-}
+
 .timerPlayer{
   width: 200px;
   background-color: rgb(18, 31, 43);
   border-radius: 10px;
+}
+h1{
+  text-align: center;
+}
+.containerMinutesGame{
+  display: flex;
+  align-items: center;
+}
+.containerTimeGame{
+  display: flex;
+  gap: 5px;
+}
+.containerMinutesGame input{
+  min-width: 4rem;
+  min-height: 2rem;
+}
+.minutesGame{
+  display: flex;
+  flex-direction: column;
 }
 .timerPlayer h1{
   text-align: center;
@@ -26,3 +43,4 @@ p{
   justify-content: space-around;
   align-items: center;
 }
+
