--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 
 .timerPlayer{
   width: 200px;
-  background-color: rgb(18, 31, 43);
+  background-color: rgb(18 31 43);
   border-radius: 10px;
 }
+
 h1{
   text-align: center;
 }
@@ -33,6 +34,12 @@ select{
   display: flex;
   flex-direction: column;
 }
+.notPlayers{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 82px;
+}
 .timerPlayer h1{
   text-align: center;
   padding-left: 10px;
@@ -40,24 +47,47 @@ select{
 }
 .timerListPlayer{
   display: grid;
-  padding: 0;
   list-style: none;
-  grid-template-columns: repeat(auto-fill, minmax(130px,1fr));
-  gap: 0.8rem
+  grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+  gap: 0.8rem;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.timer{
+  height: 15vh; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border-radius: 10px;
 }
 .game{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  margin: 0;
+
 }
 .buttonsGame{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .containerPlayers{
   display: flex;
   flex-direction: column;
-  height: 79vh;
   justify-content: space-between;
+  margin-bottom: 3rem
 }
 input#name{
   width: 100%;
@@ -65,9 +95,21 @@ input#name{
 .player{
   display: flex;
   flex-direction: column;
-
 }
 .player span, p{
   text-align: center;
+  margin: 0;
+}
+.containerStartGame{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 95%;
 }
 
+@media only screen and (max-width: 767px){
+
+}
+@media only screen and (min-width: 768px) and (max-width: 1023px){
+
+}
