--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,8 @@ body{
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   margin-left: 3px;
   margin-right: 3px;
 }
