--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ select{
   align-items: center;
   margin-top: 10px;
   margin-bottom: 10px;
+  gap: 10px;
 }
 .containerPlayers{
   display: flex;
