--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ select{
 .timerListPlayer{
   display: grid;
   list-style: none;
+  height: auto;
   grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
   width: 100%;
   margin: 0;
