--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,19 @@ select{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.timerListPlayerMax5{
+  grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  display: grid;
+  list-style: none;
+  height: auto;
+}
 .timer{
   height: 15vh; 
   display: flex;
@@ -121,6 +134,40 @@ input#name{
 @media only screen and (max-width: 767px){
 
 }
-@media only screen and (min-width: 768px) and (max-width: 1023px){
-
+@media only screen and (min-width: 768px) and (max-width: 3000px){
+  .timerListPlayerMax5{
+    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    display: grid;
+    list-style: none;
+    height: auto;
+  }
+  .timerListPlayer{
+    grid-template-columns: repeat(auto-fill, minmax(390px,1fr));
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    display: grid;
+    list-style: none;
+    height: auto;
+  }
+  .game{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    width: 100%;
+    max-width: 800px;
+  }
 }
