--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ select{
   align-items: center;
   justify-content: center;
   margin: 0;
+  margin-top: 20px;
   width: 100%;
   max-width: 500px;
 }
