--- a/src/App.css
+++ b/src/App.css
@@ -238,3 +238,10 @@ input#name{
   justify-content: space-between;
   align-items: center;
 }
+body {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none;
+}
+
